fixed scrolling background on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,11 @@
   box-sizing: border-box;
 }
 
+html, body {
+  height: 100%;
+  overflow: hidden;
+}
+
 .transition-opacity {
   transition: opacity 0.5s;
 }
